Correction overflow issue + correct margin for recenter

--- a/src/style.scss
+++ b/src/style.scss
@@ -41,12 +41,13 @@
     &__content {
         flex: 1;
         overflow-y: auto;
+        overflow-x: hidden;
         display: flex;
         flex-direction: column;
     }
 
     &__content-text {
-        padding: 20px;
+        padding: 20px 20px 10px 20px;
     }
 
     &__close-btn {
